# AIDE

./: Cargo.toml  README.md
src/: cli.rs  database.rs  editor.rs  llm.rs  main.rs  models.rs  tfidf.rs  ui.rs
src/llm/: command_processor.rs  lib.rs  main.rs  phi_model.rs
